--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -77,7 +77,7 @@ import Layout from '../layouts/Layout.astro';
           <li>
             <a href={`/products/${slug}/`} class="group">
               <figure class="grid aspect-square place-items-center border border-neutral-500 transition-colors duration-100 ease-out group-hover:border-green-500">
-                <img src={`/public/images/icon-${slug}.svg`}
+                <img src={`/images/icon-${slug}.svg`}
                 alt=""
                 width="200"
                 height="200"
@@ -150,7 +150,7 @@ import Layout from '../layouts/Layout.astro';
         <li>
           <a href="/careers/" class="group">
           <figure class="aspect-square border border-neutral-500 transition-colors duration-100 ease-out group-hover:border-green-500">
-            <img src="/images/icon-plus.svg"
+            <img src="./images/icon-plus.svg"
             width="200"
             height="200"
             decoding="async"
